--- a/QuickZip/QuickZip.csproj
+++ b/QuickZip/QuickZip.csproj
@@ -761,10 +761,16 @@
     <Compile Include="Models\Login\Login.cs" />
     <Compile Include="Models\Login\Logindetails.cs" />
     <Compile Include="Models\Login\SaveLoginSessionTrxn.cs" />
+    <Compile Include="Models\nachtransactionpresentation\NachTransactionBindRef.cs" />
+    <Compile Include="Models\nachtransactionpresentation\NachTransactionBindRefOnChange.cs" />
+    <Compile Include="Models\nachtransactionpresentation\NachTransactionBindRow.cs" />
+    <Compile Include="Models\nachtransactionpresentation\NachTransactionBindUMRN.cs" />
     <Compile Include="Models\nachtransactionpresentation\NachTransactionCheckUser.cs" />
+    <Compile Include="Models\nachtransactionpresentation\NachTransactionMainGrid.cs" />
     <Compile Include="Models\nachtransactionpresentation\nachtransactionpresentation.cs" />
     <Compile Include="Models\nachtransactionpresentation\nachtransactionpresentationaccesslayer.cs" />
     <Compile Include="Models\nachtransactionpresentation\NachTransactionPrsentationBindForm.cs" />
+    <Compile Include="Models\nachtransactionpresentation\NachTransactionUMRNOnChange.cs" />
     <Compile Include="Models\OldEmandate\BankBind.cs" />
     <Compile Include="Models\OldEmandate\Downloadoldemandateaccesslayer.cs" />
     <Compile Include="Models\OldEmandate\Searchdata.cs" />
