--- a/QuickZip/QuickZip.csproj
+++ b/QuickZip/QuickZip.csproj
@@ -797,6 +797,7 @@
     <Compile Include="Models\BankForm\BindSponserCode.cs" />
     <Compile Include="Models\BulkEmandate\BulkEmandateAttribute.cs" />
     <Compile Include="Models\BulkEmandate\BulkEMandateClass.cs" />
+    <Compile Include="Models\BulkEmandate\BulkEmandateTabledatacount.cs" />
     <Compile Include="Models\CommonFlag.cs" />
     <Compile Include="Models\DownloadEmandate\DownloadEmandateaccesslayer.cs" />
     <Compile Include="Models\DownloadEmandate\Downloademandatebank.cs" />
