--- a/QuickZip/QuickZip.csproj
+++ b/QuickZip/QuickZip.csproj
@@ -771,7 +771,9 @@
     <Compile Include="Models\Allumrn\Allumrnaccesslayer.cs" />
     <Compile Include="Models\Allumrn\GridData.cs" />
     <Compile Include="Models\Allumrn\GridDataDetails.cs" />
+    <Compile Include="Models\Allumrn\GridDataDetails1.cs" />
     <Compile Include="Models\Allumrn\Insertumrn.cs" />
+    <Compile Include="Models\Allumrn\Paging.cs" />
     <Compile Include="Models\BankForm\BankFormData.cs" />
     <Compile Include="Models\BankForm\BindBankNameDetails.cs" />
     <Compile Include="Models\BankForm\BindBankPaymentMode.cs" />
@@ -981,6 +983,7 @@
     <TypeScriptCompile Include="ClientApp\main.ts" />
     <TypeScriptCompile Include="ClientApp\Models\Allumrn\GridData.ts" />
     <TypeScriptCompile Include="ClientApp\Models\Allumrn\GridDataDetails.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\Allumrn\Singlerow.ts" />
     <TypeScriptCompile Include="ClientApp\Models\Allumrn\Umrn_Class.ts" />
     <TypeScriptCompile Include="ClientApp\Models\BankForm\BindBankNameDetails.ts" />
     <TypeScriptCompile Include="ClientApp\Models\BankForm\BindBankPaymentMode.ts" />
